app edit view/css enhancements

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -26,6 +26,12 @@
    form button
       margin-top: 24px
 
+#apikey-edit
+   .settings
+      padding: 20px
+   .buttons
+      margin-top: 20px
+
 #notifications
    .notifications-list
       md-list-item
