full user-crud on oauth2 applications/api keys

--- a/frontend/app/views/appedit.html
+++ b/frontend/app/views/appedit.html
@@ -51,7 +51,7 @@
 
          <div class="buttons">
             <md-button class="md-raised" type="submit">Save</md-button>
-            <md-button class="md-raised md-primary" type="submit">Delete this app</md-button>
+            <md-button class="md-raised md-primary" ng-click="delete($ev)">Delete this app</md-button>
          </div>
 
       </form>
