Some finality in the user panel
 + client/server implementation of "delete my account"
 + redirecting to "featured" once done

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -40,3 +40,7 @@
             text-align: center
             font-size: 20px
             font-weight: 500
+
+#confirm-deletion
+   .enter-password
+      padding: 20px
