--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -75,7 +75,7 @@
             </md-button>
          </md-list-item>
          <md-list-item>
-            <md-button class="md-raised">
+            <md-button class="md-raised" ng-click="openDeleteAccountDialog($event)">
                <h4>Please, delete my account</h4>
             </md-button>
          </md-list-item>
