Disp. multiple latest compatible GLPi versions
 + throwing ResourceNotFound in at /api/plugin/key when not found
 + getting rid of withCurrentVersion() scope which helps
 + getting rid of one superfluous SQL query
 + having a slight helper in the controller which does the same thing
 + coded a sass small snippet to display the latest glpi versions inline
   (it's kind of like what was done for the authors, using some
   :after pseudo-element)
 + all of this closes , resolve, #18

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -50,7 +50,7 @@
       .description
          background-color: $verylightgrey
    .markdown
-      li 
+      li
          list-style-type: inherit
 
    .infos
@@ -68,6 +68,18 @@
                text-transform: uppercase
             label + span
                display: table-cell
+         li span.glpi-top-compatible-version
+            padding-left: 6px
+            &:after
+               display: inline-block
+               content: ','
+               padding-left: 2px
+            &:first-child
+               padding-left: 0
+            &:last-child
+               &:after
+                  display: none
+
 
 @media (max-width: 599px)
    .plugin
