--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -66,7 +66,7 @@
             </li>
             <li>
                <label>{{'COMPATIBLE_WITH'|translate}}</label>
-               <span>{{plugin.compatible_with}}</span>
+               <span><span class="glpi-top-compatible-version" ng-repeat="glpiVersion in displayLatestCompatibleGlpiVersions(plugin.versions)">{{glpiVersion}}</span></span>
             </li>
             <li ng-show="plugin.homepage_url">
                <label>{{'HOMEPAGE'|translate}}</label>
