clarified mail template for github validated email
thanks to @Manu1400 for reporting this wasn't clear enough
as a welcome message :)

--- a/api/mailtemplates/templates/external_account_mail_as_main.html
+++ b/api/mailtemplates/templates/external_account_mail_as_main.html
@@ -11,6 +11,7 @@
    This email address is already validated by {{service}}.
 </p>
 <p>
-   You don't have anything to do to validate this email address.
+   You don't have anything to do to validate this email address.<br />
+   Welcome aboard !
 </p>
 {% endblock %}
