clarified again external_account_mail_as_main.html template

--- a/api/mailtemplates/templates/external_account_mail_as_main.html
+++ b/api/mailtemplates/templates/external_account_mail_as_main.html
@@ -8,7 +8,7 @@
    You choose to have {{user.email}} as primary email account for GLPi Plugins.
 </p>
 <p>
-   This email address is already validated by {{service}}.
+   Your email address is validated by {{service}}.
 </p>
 <p>
    You don't have anything to do to validate this email address.<br />
