--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -1,6 +1,7 @@
 .plugin
    margin-top: 35px
    min-height: 500px
+   padding-left: 15px
    .plugin_header
       border-bottom: 1px dashed $lightgrey
       padding-bottom: 5px
