--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -16,6 +16,7 @@
 @import 'submit_plugin'
 @import 'social_icons'
 @import 'panel'
+@import 'pluginpanel'
 @import 'footer'
 
 body
@@ -81,7 +82,7 @@ ul li
    height: 40px
 
 .container
-   padding: 30px 0 50px 15px
+   padding: 30px 0 50px 0
    div[layout=row]
       md-content:nth-child(2)
          background-color: $verylightgrey
