view, controller, upcoming work for author panel

--- a/frontend/app/views/panel.html
+++ b/frontend/app/views/panel.html
@@ -86,7 +86,7 @@
 
       <md-list>
          <md-list-item ng-repeat="plugin in plugins">
-            <md-button ui-sref="plugin({key: plugin.key})">
+            <md-button ui-sref="pluginpanel({key: plugin.key})">
                <h4>{{plugin.name}}</h4>
             </md-button>
          </md-list-item>
