styling the mail templates using Ink framework

--- a/api/mailtemplates/templates/plugin_submission.html
+++ b/api/mailtemplates/templates/plugin_submission.html
@@ -1,6 +1,6 @@
-<p>Dear GLPi Plugins Admin Team,</p>
+<h1>Dear GLPi Plugins Admin Team,</h1>
 
-<p>A new Plugin has been submitted on the directory.</p>
+<p class="lead">A new Plugin has been submitted on the directory.</p>
 
 <p>here is it's authoritative URL (plugin.xml file) : <a href="{{plugin_xml.url}}">{{plugin_xml.url}}</a></p>
 
