--- a/api/mailtemplates/templates/global.css
+++ b/api/mailtemplates/templates/global.css
@@ -1,28 +1,85 @@
+table.facebook td {
+   background: #3b5998;
+   border-color: #2d4473;
+}
+
+table.facebook:hover td {
+   background: #2d4473 !important;
+}
+
+table.twitter td {
+   background: #00acee;
+   border-color: #0087bb;
+}
+
+table.twitter:hover td {
+   background: #0087bb !important;
+}
+
+table.google-plus td {
+   background-color: #DB4A39;
+   border-color: #CC0000;
+}
+
+table.google-plus:hover td {
+   background: #CC0000 !important;
+}
+
+.template-label {
+   color: #ffffff;
+   font-weight: bold;
+   font-size: 11px;
+}
+
+.callout .wrapper {
+   padding-bottom: 20px;
+}
+
+.callout .panel {
+   background: #ECF8FF;
+   border-color: #b9e5ff;
+}
+
 .header {
-   background-color: #6F92BA;
-   border-radius: 4px;
-   height: 80px;
-   width: 100%;
+   background: #6F92BA;
+}
+
+.sublogo {
+   height: 100%;
    color: #fff;
-   padding: 10px 40px 0 40px;
-   box-sizing: border-box;
+   font-size: 20px;
+   display: block;
+   padding-top: 25px;
 }
 
-.logo {
-   width: 200px;
-   float: left;
-}
-.logo img, .logo h1 {
-   float: left;
-}
-.logo h1 {
-   font-size: 16px;
-   padding-top: 2px;
+.footer .wrapper {
+   background: #ebebeb;
 }
 
-.header h2 {
-    float: left;
-    line-height: 45px;
-    margin-left: 40px;
-    font-size: 24px;
+.footer h5 {
+   padding-bottom: 10px;
+}
+
+table.columns .text-pad {
+   padding-left: 10px;
+   padding-right: 10px;
+}
+
+table.columns .left-text-pad {
+   padding-left: 10px;
+}
+
+table.columns .right-text-pad {
+   padding-right: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+
+   table[class="body"] .right-text-pad {
+      padding-left: 10px !important;
+   }
+
+   table[class="body"] .left-text-pad {
+      padding-right: 10px !important;
+   }
 }
