--- a/api/mailtemplates/templates/layout.html
+++ b/api/mailtemplates/templates/layout.html
@@ -1,20 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-   <meta charset="UTF-8">
-   <style>{% include 'global.css' %}</style>
-   {% if stylesheet %}
-   <style>{% include stylesheet %}</style>
-   {% endif %}
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width"/>
+  <style type="text/css">
+    {% include 'ink.css' %}
+  </style>
+  <style>
+    {% include 'global.css' %}
+  </style>
 </head>
 <body>
-   <div class="header">
-      <div class="logo"><img src="{{client_url}}/images/logo-small.png"><h1>Plugins</h1></div>
-      <h2>{{subject}}</h2>
-   </div>
+  <table class="body">
+    <tr>
+      <td class="center" align="center" valign="top">
+        <center>
 
-   <div class="content">
-      {% block message %}{% endblock %}
-   </div>
+          <table class="row header">
+            <tr>
+              <td class="center" align="center">
+                <center>
+
+                  <table class="container">
+                    <tr>
+                      <td class="wrapper last">
+
+                        <table class="twelve columns">
+                          <tr>
+                            <td class="six sub-columns">
+                              <img src="https://raw.githubusercontent.com/glpi-project/plugins/master/frontend/app/images/logo-small.png">
+                              <span class="sublogo">Plugins</span>
+                            </td>
+                            <td class="six sub-columns last" style="text-align:right; vertical-align:middle;">
+                              <span class="template-label">{{subject}}</span>
+                            </td>
+                            <td class="expander"></td>
+                          </tr>
+                        </table>
+
+                      </td>
+                    </tr>
+                  </table>
+
+                </center>
+              </td>
+            </tr>
+          </table>
+
+          <table class="container">
+            <tr>
+              <td>
+
+                <table class="row">
+                  <tr>
+                    <td class="wrapper last">
+
+                      <table class="twelve columns">
+                        <tr>
+                          <td>
+                            {% block message %}{% endblock %}
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                  </tr>
+                </table>
+
+              </td>
+            </tr>
+          </table>
+
+        </center>
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
