fixed display bug on plugin_list download count

--- a/frontend/app/styles/_results_list.sass
+++ b/frontend/app/styles/_results_list.sass
@@ -11,6 +11,14 @@
    .md-button
       min-width: 162px
       margin: 0 20px 0 0
+   .downloads
+      min-width: 30px
+      display: inline-block
+      position: relative
+      top: 7px
+      @include clearfix
+      .pill
+         float: right
 
 .result:nth-child(even)
    background-color: lighten($lightgrey, 6%)
