result_list displays a loading message

--- a/frontend/app/styles/_results_list.sass
+++ b/frontend/app/styles/_results_list.sass
@@ -5,6 +5,15 @@
       color: $blue
       margin: 0 6px
 
+.loading
+   i
+      font-size: 26px
+      margin-right: 10px
+      color: #5078a6
+   span
+      color: #b4c6db
+      font-size: 26px
+
 .result
    margin: 0
    padding: 10px 5px
