applying the original left padding to the child divs

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -9,7 +9,7 @@
 @import 'usermenu'
 @import 'sidenav'
 @import 'compact_list'
-@import 'results_list'
+@import 'plugin_list'
 @import 'plugin'
 @import "register"
 @import 'contact'
