--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -1,4 +1,4 @@
-<div layout="column">
+<div layout="column" class="plugin-list">
    <div class="list-name">
       <p ng-show="author">
          <a ui-sref="author({id: author.id})">{{author.name}}</a>{{'PLUGIN_CONTRIBUTED_TO'|translate}}
