changes in Message.php endpoint / message.js functionnality
 + added the padding-left that was removed from the main div
 + added exception raising
 + more meaningful Toast pops when message rejected

--- a/frontend/app/views/contact.html
+++ b/frontend/app/views/contact.html
@@ -1,37 +1,39 @@
-<h2>{{'QUESTION_SUGGESTION_PROBLEM'|translate}}</h2>
-<span class="legend">{{'PLEASE_SEND_US_A_MESSAGE'|translate}}</span>
-<div layout="row" layout-wrap>
-   <md-content layout-padding flex="65" flex-sm="100" flex-md="100">
-      <form name="contactForm" id="contactForm">
-         <div layout layout-sm="column">
-            <md-input-container flex class='firstnamebox picbox'>
-               <label>{{'FIRSTNAME'|translate}}</label>
-               <input ng-model="contact.firstname" />
+<div class="contact-form" class="contact-form">
+   <h2>{{'QUESTION_SUGGESTION_PROBLEM'|translate}}</h2>
+   <span class="legend">{{'PLEASE_SEND_US_A_MESSAGE'|translate}}</span>
+   <div layout="row" layout-wrap>
+      <md-content layout-padding flex="65" flex-sm="100" flex-md="100">
+         <form name="contactForm" id="contactForm">
+            <div layout layout-sm="column">
+               <md-input-container flex class='firstnamebox picbox'>
+                  <label>{{'FIRSTNAME'|translate}}</label>
+                  <input ng-model="contact.firstname" />
+               </md-input-container>
+               <md-input-container flex class='realnamebox picbox'>
+                  <label>{{'LASTNAME'|translate}}</label>
+                  <input ng-model="contact.lastname" />
+               </md-input-container>
+            </div>
+            <md-input-container flex class='emailbox picbox'>
+               <label>{{'EMAIL'|translate}}</label>
+               <input ng-model="contact.email" type="email" />
             </md-input-container>
-            <md-input-container flex class='realnamebox picbox'>
-               <label>{{'LASTNAME'|translate}}</label>
-               <input ng-model="contact.lastname" />
+            <md-input-container flex class='subjectbox picbox'>
+               <label>{{'SUBJECT'|translate}}</label>
+               <input ng-model="contact.subject" />
             </md-input-container>
-         </div>
-         <md-input-container flex class='emailbox picbox'>
-            <label>{{'EMAIL'|translate}}</label>
-            <input ng-model="contact.email" type="email" />
-         </md-input-container>
-         <md-input-container flex class='subjectbox picbox'>
-            <label>{{'SUBJECT'|translate}}</label>
-            <input ng-model="contact.subject" />
-         </md-input-container>
-         <md-input-container flex class='messagebox picbox'>
-            <label>{{'YOUR_MESSAGE'|translate}}</label>
-            <textarea ng-model="contact.message" columns="1" md-maxlength="500"></textarea>
-         </md-input-container>
-         <div class="note">
-            <p><span>Note</span>: {{'PLEASE_USE_SUGGESTION_TRACKER'|translate}} <a href="http://suggest.glpi-project.org">http://suggest.glpi-project.org</a></p>
-         </div>
-         <div vc-recaptcha theme="light" key="key" on-create="setWidgetId(widgetId)" on-success="setResponse(response)" on-expire="cbExpiration()"></div>
-         <md-button class="md-raised md-primary submit-button" ng-click="submit()">{{'SUBMIT'|translate}}
-            <i class="fa fa-paper-plane"></i>
-         </md-button>
-      </form>
-   </md-content>
+            <md-input-container flex class='messagebox picbox'>
+               <label>{{'YOUR_MESSAGE'|translate}}</label>
+               <textarea ng-model="contact.message" columns="1" md-maxlength="500"></textarea>
+            </md-input-container>
+            <div class="note">
+               <p><span>Note</span>: {{'PLEASE_USE_SUGGESTION_TRACKER'|translate}} <a href="http://suggest.glpi-project.org">http://suggest.glpi-project.org</a></p>
+            </div>
+            <div vc-recaptcha theme="light" key="key" on-create="setWidgetId(widgetId)" on-success="setResponse(response)" on-expire="cbExpiration()"></div>
+            <md-button class="md-raised md-primary submit-button" ng-click="submit()">{{'SUBMIT'|translate}}
+               <i class="fa fa-paper-plane"></i>
+            </md-button>
+         </form>
+      </md-content>
+   </div>
 </div>
