--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -31,7 +31,7 @@
                   <md-tooltip  md-direction="top">downloads</md-tooltip>
                </span>
             </span>
-            <md-button class="md-fab md-primary md-raised" ng-click="download()">
+            <md-button class="md-fab md-primary md-raised" href="{{download_url}}">
                <i class="fa fa-2x fa-download white"></i>
                <md-tooltip md-direction="top">Download</md-tooltip>
             </md-button>
