displaying gravatar in usermenu

--- a/frontend/app/styles/_usermenu.sass
+++ b/frontend/app/styles/_usermenu.sass
@@ -13,9 +13,12 @@
       span
          margin-left: 10px
          position: relative
-         top: -9px
+         top: -10px
          font-size: 20px
    i.fa
       color: #fff
       font-size: 52px
-      line-height: 80px
+      line-height: 60px
+   .avatar
+      position: relative
+      top: 7px
