adding padding-left to compact lists

--- a/frontend/app/views/authors.html
+++ b/frontend/app/views/authors.html
@@ -1,5 +1,5 @@
 
-<div layout="column" class="authors">
+<div layout="column" class="authors-list">
    <md-list class="compact-list">
       <md-subheader class='topic margin'>{{'AUTHORS'|translate}}</md-subheader>
       <div ng-show="loading" class="loading">
