--- a/frontend/app/styles/_compact_list.sass
+++ b/frontend/app/styles/_compact_list.sass
@@ -1,8 +1,10 @@
 @import 'compass'
 @import 'colors'
 
-.compact-list
+.authors-list, .tags-list
    padding-left: 20px
+
+.compact-list
    margin-bottom: 30px
    .topic
       font-size: 2em
