--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -1,4 +1,4 @@
-<div layout="column">
+<div layout="column" class="tags-list">
 
    <md-list class="compact-list results">
       <md-subheader class='topic margin'>{{'TAGS'|translate}}</md-subheader>
