applying the padding-left to featured page

--- a/frontend/app/views/featured.html
+++ b/frontend/app/views/featured.html
@@ -1,4 +1,4 @@
-<div layout="row" layout-wrap>
+<div layout="row" layout-wrap class="featured-page">
    <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="compact-list">
          <md-subheader class='topic'>{{'TRENDING' | translate}}
