applying the padding-left to apikeys page

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -17,6 +17,9 @@
       md-list-item
          padding: 10px 20px
 
+.apikeys-page
+   padding-left: 20px
+
 .claim_authorship
    padding-bottom: 20px
    width: 50%
