better styling for the 'view api key' modal

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -20,6 +20,11 @@
 .apikeys-page
    padding-left: 20px
 
+.view-apikey-modal
+   .settings
+      padding: 10px
+      min-width: 344px
+
 .claim_authorship
    padding-bottom: 20px
    width: 50%
