--- a/frontend/app/views/viewapikey.html
+++ b/frontend/app/views/viewapikey.html
@@ -1,4 +1,4 @@
-<md-dialog class="dialog">
+<md-dialog class="dialog view-apikey-modal">
    <md-toolbar>
       <div class="md-toolbar-tools">
          <h2>View Client Credentials</h2>
