properly displaying the plugin name
on the author panel

--- a/frontend/app/views/pluginpanel.html
+++ b/frontend/app/views/pluginpanel.html
@@ -1,6 +1,6 @@
 <div layout="column" class="pluginpanel">
    <div class="pluginpanel-header">
-      <h2 class="plugin-name">OCS Import</h2>
+      <h2 class="plugin-name">{{plugin.card.name}}</h2>
       <h2 class="panel-title">Author Panel</h2>
    </div>
 
