--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -19,6 +19,7 @@
 @import 'panel'
 @import 'pluginpanel'
 @import 'author_page'
+@import 'docpage'
 @import 'footer'
 
 body
@@ -40,7 +41,7 @@ h2
    margin: 0
    color: rgba(0,0,0,0.54)
    font-weight: normal
-   font-suize: 2em
+//   font-size: 2em
 h4
    margin: 0
    color: $grey
