enhancing Developer Docs
 + typing the paragraph for Authorization
 + there is Authorization scenario
 + began to merge old previous scenarios for each endpoints
 + typing sass accordingly when needed

--- a/frontend/app/styles/_docpage.sass
+++ b/frontend/app/styles/_docpage.sass
@@ -14,16 +14,21 @@
       font-size: 1.6em
 
    h3
-      font-size: 1.2em
+      font-size: 1em
 
    h3
       margin-top: 10px
 
    ul
       margin: 0 0 15px 0
-
-   li
-      list-style-type: circle
+      li
+         list-style-type: circle
 
    p
       margin: 10px 0 10px 0
+
+   table thead
+      display: none
+
+   pre
+      margin: 0
