--- a/frontend/app/styles/_docpage.sass
+++ b/frontend/app/styles/_docpage.sass
@@ -14,10 +14,14 @@
       font-size: 1.6em
 
    h3
-      font-size: 1em
-
-   h3
+      font-size: 1.4em
       margin-top: 10px
+      padding-left: 20px
+
+   h4
+      font-size: 1.2em
+      margin-top: 10px
+      padding-left: 40px
 
    ul
       margin: 0 0 15px 0
@@ -26,9 +30,17 @@
 
    p
       margin: 10px 0 10px 0
+      padding-left: 40px
+
+   ul, ol
+      padding-left: 60px
+
+   table
+      margin-left: 40px
 
    table thead
       display: none
 
    pre
       margin: 0
+      padding-left: 40px
