improved every intro paragraph, described all plugins endpoints, according sass

--- a/frontend/app/styles/_docpage.sass
+++ b/frontend/app/styles/_docpage.sass
@@ -12,16 +12,17 @@
 
    h2
       font-size: 1.6em
+      padding: 10px 0 10px 0
 
    h3
       font-size: 1.4em
-      margin-top: 10px
-      padding-left: 20px
+      padding: 10px 0 10px 20px
 
    h4
       font-size: 1.2em
-      margin-top: 10px
       padding-left: 40px
+      padding: 10px 0 10px 40px
+      text-decoration: underline
 
    h5
       padding-left: 40px
@@ -30,7 +31,8 @@
       margin: 0 0 15px 0
       li
          list-style-type: circle
-
+         & > ul
+            margin: 0 0 2px 0
    p
       margin: 10px 0 10px 0
       padding-left: 40px
@@ -47,3 +49,6 @@
    pre
       margin: 0
       padding-left: 40px
+
+   code
+      margin-bottom: 0
