displaying OAuth2 signup/signin feature only when not in IE atm

--- a/frontend/app/views/signin.html
+++ b/frontend/app/views/signin.html
@@ -15,9 +15,9 @@
       </form>
 
 
-      <h2>Or connect with an external account</h2>
 
-      <div>
+      <div ng-show="notie">
+         <h2>Or connect with an external account</h2>
          <md-button ng-click="ctrl.linkAccount('github')"><i class="fa fa-github social-icon"></i></md-button>
 <!--          <md-button><i class="fa fa-google social-icon"></i></md-button>
          <md-button><i class="fa fa-facebook social-icon"></i></md-button>
