--- a/frontend/app/views/signup.html
+++ b/frontend/app/views/signup.html
@@ -53,7 +53,7 @@
          <md-button class="md-raised md-primary" ng-click="signUp()" id="signup-button">Sign-Up !</md-button>
       </form>
    </div>
-   <div flex="66" class="link-your-account">
+   <div flex="66" class="link-your-account" ng-show="notie">
       <h2>Or link your account</h2>
 
       <md-button ng-click="authenticate('github')"><i class="fa fa-github"></i></md-button>
