another inline displayed list for plugin langs

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -80,6 +80,18 @@
             &:last-child
                &:after
                   display: none
+         li span.plugin-languages
+            span
+               &:after
+                  content: ','
+                  display: inline-block
+                  padding-left: 4px
+               margin-left: 10px
+               &:first-child
+                  margin-left: 0
+               &:last-child
+                  &:after
+                     display: none
 
 
 @media (max-width: 599px)
