showing translations list only when existing

--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -92,7 +92,7 @@
                <label>{{'UPDATED'|translate}}</label>
                <span>{{fromNow(plugin.date_updated)}}</span>
             </li>
-            <li>
+            <li ng-hide="plugin.langs.length == 0">
                <label>{{'TRANSLATIONS'|translate}}</label>
                <span class="plugin-languages">
                   <span ng-repeat="lang in plugin.langs">{{lang.lang}}</span>
