Makes panel.js ready for new actions
 + Changed the table name with style
 + added the conditional anchor-buttons corresponding to the rights the user has on plugin
 + according sass code
 + having optional params for pluginpanel to trigger special actions without click
   + one to directly reload the XML file
   + one to directly show the user permissions dialog

--- a/frontend/app/styles/_panel.sass
+++ b/frontend/app/styles/_panel.sass
@@ -56,3 +56,9 @@
 #confirm-deletion
    .enter-password
       padding: 20px
+
+.panel-plugins
+   md-list-item
+      margin-top: 10px
+      &:hover
+         background-color: #eee
