--- a/frontend/app/views/pluginpanel.html
+++ b/frontend/app/views/pluginpanel.html
@@ -1,7 +1,7 @@
 <div layout="column" class="pluginpanel">
    <div class="pluginpanel-header">
       <h2 class="plugin-name">{{plugin.card.name}}</h2>
-      <h2 class="panel-title">Author Panel</h2>
+      <h2 class="panel-title">Plugin Panel</h2>
    </div>
 
    <form class="plugin-settings" ng-submit="updateSettings()">
