Condtionnally open the plugin permissions modal
 + creation of LackPermission 401 Exception
 + having plugin_permissions endpoint
 + showing plugin permissions modal only if the plugin card has
   been fetched
 + displaying the plugin key in the header of the dialog

--- a/frontend/app/views/pluginuserpermissions.html
+++ b/frontend/app/views/pluginuserpermissions.html
@@ -1,7 +1,7 @@
 <md-dialog class="dialog plugin-user-permissions">
    <md-toolbar>
       <div class="md-toolbar-tools">
-         <h2>Manage permissions of GLPi Plugins Users on Plugin "{{plugin.name}}"</h2>
+         <h2>Manage permissions of GLPi Plugins Users on Plugin "{{plugin.key}}"</h2>
          <span flex></span>
          <md-button class="md-icon-button" ng-click="close()">
            <i class="fa fa-times"></i>
