--- a/frontend/app/views/pluginuserpermissions.html
+++ b/frontend/app/views/pluginuserpermissions.html
@@ -1,7 +1,7 @@
 <md-dialog class="dialog plugin-user-permissions">
    <md-toolbar>
       <div class="md-toolbar-tools">
-         <h2>Manage permissions of GLPi Plugins Users on Plugin "{{plugin.key}}"</h2>
+         <h2>Manage permissions of GLPi Plugins Users on "{{plugin.key}}" Plugin</h2>
          <span flex></span>
          <md-button class="md-icon-button" ng-click="close()">
            <i class="fa fa-times"></i>
@@ -9,5 +9,10 @@
       </div>
    </md-toolbar>
    <div>
+      <md-list>
+         <md-list-item ng-repeat="user in permissions">
+            <h4>{{user.username}}</h4>
+         </md-list-item>
+      </md-list>
    </div>
 </md-dialog>
